hard-gists/2b3003f44b3ddf5931c9a5e61d8ba417/run.log
=== Docker Run Log for 2b3003f44b3ddf5931c9a5e61d8ba417 ===
Started at: Mi 29. Okt 13:24:41 CET 2025

[2025-10-29 13:24:41] START: Running container for 2b3003f44b3ddf5931c9a5e61d8ba417
[2025-10-29 13:24:41] SUCCESS: Container 0d5eb1fcc8b0a8d0765e8c76a0f681688a5edeb11dfa7cb274af00c9b3376f59 started for 2b3003f44b3ddf5931c9a5e61d8ba417
=== Container logs for 2b3003f44b3ddf5931c9a5e61d8ba417 ===
  File "/snippet.py", line 19
    print ''.join('{:02x}'.format(x) for x in ba)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2b3003f44b3ddf5931c9a5e61d8ba417 ===
[2025-10-29 13:24:43] INFO: Container 0d5eb1fcc8b0a8d0765e8c76a0f681688a5edeb11dfa7cb274af00c9b3376f59 has stopped
